[metadata]
name = electricity-monitor
summary = Electricity Monitor Command-Line Tool
description-file =
	README.md
author = Petar Vorotnikov
author_email = mail@vorotnikov.net
url = https://github.com/pvorotnikov/electricity-monitor
license = MIT
classifier =
	Environment :: Console
	Intended Audience :: Home Owners
	Intended Audience :: Developers
	Operating System :: POSIX :: Linux
	Operating System :: MacOS :: MacOS X
	Operating System :: Microsoft :: Windows
	Programming Language :: Python
	Programming Language :: Python :: 3
requires-python = >=3

[files]
packages =
	monitor
data_files =
	. = requirements.txt


[global]

[bdist_wheel]
universal = 1

[entry_points]
console_scripts =
	electricity = monitor.main:electricity

[easy_install]
